--- a/src/main/resources/templates/like-page.html
+++ b/src/main/resources/templates/like-page.html
@@ -10,10 +10,10 @@
     <title>Like page</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body style="background-color: #f5f5f5;">
 
@@ -27,10 +27,16 @@
                     <br>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <button type="button" class="btn btn-outline-danger btn-block"><span class="fa fa-times"></span> Dislike</button>
+                    <form action="/action" method="post">
+                        <input type="hidden" name="action" value="dislike">
+                        <button type="submit" class="btn btn-outline-danger btn-block"><span class="fa fa-times"></span> Dislike</button>
+                    </form>
                 </div>
                 <div class="col-12 col-lg-6">
-                    <button class="btn btn-outline-success btn-block"><span class="fa fa-heart"></span> Like</button>
+                    <form action="/action" method="post">
+                        <input type="hidden" name="action" value="like">
+                        <button type="submit" class="btn btn-outline-success btn-block"><span class="fa fa-heart"></span> Like</button>
+                    </form>
                 </div>
                 <!--/col-->
             </div>
