added favicon and its loading, added redirect from home page to users, refactored messages Servlet, removed unnecessary files and code

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -381,6 +381,15 @@ width: 100%
 width: 100%;
 display: flex;
 }
+.no-messages-li {
+width: 100%
+}
+
+.no-messages {
+    border: 1px solid gray;
+    border-radius: 8px;
+    background-color: azure;
+}
 .chat-button {
     border: none;
     padding: 4px 12px;
