--- a/src/main/resources/css/style.liked-list.css
+++ b/src/main/resources/css/style.liked-list.css
@@ -6,6 +6,13 @@ body {
     margin-bottom: 20px;
 }
 
+.card-img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+}
+
 .user-img {
     max-width: 100px;
     max-height: 100px;
